Fixing snap alignment commit

--- a/wordpress.benefitscheckup.org/wp-content/themes/bcuwptheme/bcu.css
+++ b/wordpress.benefitscheckup.org/wp-content/themes/bcuwptheme/bcu.css
@@ -653,7 +653,7 @@ div.AdvancedText {
 	
 	.page-id-11936 .rowcol2.fullPage {
 	  margin-right: 20px;
-	  margin-top: 20px;
+	  margin-top: 5px;
 	  width: 375px;
 	  float: right;
 	  font-size: 18px;
@@ -755,7 +755,7 @@ div.AdvancedText {
 	
 	.page-id-13244 .rowcol2.fullPage {
 	  margin-right: 20px;
-	  margin-top: 20px;
+	  margin-top: 5px;
 	  width: 375px;
 	  float: right;
 	  font-size: 18px;
